[package]
name = "stm32rust"
version = "0.0.1"
authors = ["daanklijn"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
features = ["stm32f411", "rt"]
version = "0.8.3"
