[package]
name = "stm32rust"
version = "0.0.1"
authors = ["daanklijn"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
features = ["stm32f411", "rt"]
version = "0.13.2"
