[package]
name = "stm32rust"
version = "0.0.1"
authors = ["daanklijn"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
systick-monotonic = "1.0.0"
panic-halt = "0.2.0"
mcp49xx = "0.3.0"
cortex-m-rtic = "1.1.3"

[dependencies.stm32f4xx-hal]
features = ["stm32f411", "rt"]
version = "0.13.2"
